tdf#149402 - BASIC: Don't extend comment if line ends in a whitespace

Change-Id: I8adf530e77a0e65329fa59ac2873b99f48befac4